# Hermes-Output

./: .gitignore  README.md
.github/workflows/: ci.yml
captain-fractal-studio/: .gitignore  CaptainFractal.spec  captain_fractal_studio.py  verify_captain_fractal.py
knowledgereduce/: MODELREDUCE_MASTER_PLAN.md  MODELREDUCE_SESSIONS.md  README.md  pyproject.toml  pytest.ini  test_graph_db
knowledgereduce/data/: civic_honors_distilled.jsonl
knowledgereduce/docs/: ROADMAP-v2.md
knowledgereduce/examples/: distillation_pipeline.py
knowledgereduce/knowledge_graph_pkg/: __init__.py  cli.py  cross_model.py  distillation.py  extraction.py  model_distill.py  model_drop.py  probe_templates.py  qa.py  quality.py  semantic.py
knowledgereduce/test_store/: catalog.db  manifest.json
knowledgereduce/test_store/shards/2026/06/: model-qwen2.5_7b-physics-0e72d77a09b5.jsonl
knowledgereduce/tests/: test_cli.py  test_cross_model.py  test_embeddings.py  test_extraction.py  test_model_drop.py  test_model_eval.py  test_quality.py  test_semantic.py
