[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledgereduce"
version = "0.2.0"
description = "Distill documents into compact, reliability-rated, model-absorbable knowledge facts."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Nels Lindahl", email = "nels@nelslindahl.com" }]
keywords = ["knowledge-graph", "distillation", "nlp", "training-data", "fine-tuning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core stays light and dependency-minimal on purpose.
dependencies = [
    "networkx>=2.5",
    "numpy>=1.19.0",
]

[project.optional-dependencies]
# Document ingestion helpers (HTML already handled in stdlib; PDF needs pymupdf).
ingest = ["beautifulsoup4>=4.9.0", "requests>=2.25.0"]
pdf = ["pymupdf>=1.23.0"]
# Heavier, optional NLP backend (Session 4).
nlp = ["spacy>=3.0.0"]
# Visualization extras.
viz = ["matplotlib>=3.3.0", "numpy>=1.19.0"]
# Everything for development/testing.
dev = ["pytest>=6.0.0", "pytest-cov>=2.12.0"]

[project.urls]
Homepage = "https://github.com/nelslindahlx/Hermes-Output"
Repository = "https://github.com/nelslindahlx/Hermes-Output"

[project.scripts]
knowledgereduce = "knowledge_graph_pkg.cli:main"

[tool.setuptools]
packages = ["knowledge_graph_pkg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = "test_*.py"
addopts = "-q"
